k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 3000
            path: /
          - pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 5000
            path: /api
